update first console log and print string on console log

--- a/base_2/index.html
+++ b/base_2/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <h1>Javascript tutorial</h1>
-    <script>
-        console.log('hello ! this is the first javascript')
-    </script>
+    <script src="index.js"></script>
 </body>
 
 </html>
