--- a/base_2/index.html
+++ b/base_2/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html   lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>Javascript tutorial</h1>
     <script src="index.js"></script>
 </body>
-
 </html>
